修正圖片與 Logo 切換邏輯

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <div class="image-container card">
                       <img
                         class="image__dark theme-img"
-                        src="img/demo/screens/1.webp"
+                        src="img/demo/screens/1-dark.webp"
                         alt="Helio Coming Soon Template Preview Screen"
                       />
                       <video class="image__light" muted loop autoplay>
@@ -184,7 +184,7 @@
                     <div class="image-container card">
                       <img
                         class="image__dark theme-img"
-                        src="img/demo/screens/3.webp"
+                        src="img/demo/screens/3-dark.webp"
                         alt="Helio Coming Soon Template Preview Screen"
                       />
                       <video class="image__light" muted loop autoplay>
@@ -204,7 +204,7 @@
                     <div class="image-container card">
                       <img
                         class="image__dark theme-img"
-                        src="img/demo/screens/5.webp"
+                        src="img/demo/screens/5-dark.webp"
                         alt="Helio Coming Soon Template Preview Screen"
                       />
                       <video class="image__light" muted loop autoplay>
@@ -224,7 +224,7 @@
                     <div class="image-container card">
                       <img
                         class="image__dark theme-img"
-                        src="img/demo/screens/2.webp"
+                        src="img/demo/screens/2-dark.webp"
                         alt="Helio Coming Soon Template Preview Screen"
                       />
                       <video class="image__light" muted loop autoplay>
@@ -244,7 +244,7 @@
                     <div class="image-container card">
                       <img
                         class="image__dark theme-img"
-                        src="img/demo/screens/4.webp"
+                        src="img/demo/screens/4-dark.webp"
                         alt="Helio Coming Soon Template Preview Screen"
                       />
                       <video class="image__light" muted loop autoplay>
@@ -264,7 +264,7 @@
                     <div class="image-container card">
                       <img
                         class="image__dark theme-img"
-                        src="img/demo/screens/6.webp"
+                        src="img/demo/screens/6-dark.webp"
                         alt="Helio Coming Soon Template Preview Screen"
                       />
                       <video class="image__light" muted loop autoplay>
