修正 color-scheme 預設為 dark 模式，並修正圖片切換邏輯

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Custom Browser Color End -->
   </head>
 
-  <body>
+  <body color-scheme="dark">
     <!-- Loader Start -->
     <div class="loader">
       <div class="loader">
