--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         alt="Helio Coming Soon Template Preview Screen"
                       />
                       <video class="image__light" muted loop autoplay>
-                        <source src="img/demo/screens/2.mp4" type="video/mp4" />
+                        <source src="img/demo/screens/3.mp4" type="video/mp4" />
                         Your browser does not support the video tag.
                       </video>
                     </div>
@@ -208,7 +208,10 @@
                         alt="Helio Coming Soon Template Preview Screen"
                       />
                       <video class="image__light" muted loop autoplay>
-                        <source src="img/demo/screens/3.mp4" type="video/mp4" />
+                        <source
+                          src="img/demo/screens/5.webm"
+                          type="video/mp4"
+                        />
                         Your browser does not support the video tag.
                       </video>
                     </div>
@@ -228,7 +231,7 @@
                         alt="Helio Coming Soon Template Preview Screen"
                       />
                       <video class="image__light" muted loop autoplay>
-                        <source src="img/demo/screens/4.mp4" type="video/mp4" />
+                        <source src="img/demo/screens/2.mp4" type="video/mp4" />
                         Your browser does not support the video tag.
                       </video>
                     </div>
@@ -248,7 +251,7 @@
                         alt="Helio Coming Soon Template Preview Screen"
                       />
                       <video class="image__light" muted loop autoplay>
-                        <source src="img/demo/screens/2.mp4" type="video/mp4" />
+                        <source src="img/demo/screens/4.mp4" type="video/mp4" />
                         Your browser does not support the video tag.
                       </video>
                     </div>
@@ -268,7 +271,10 @@
                         alt="Helio Coming Soon Template Preview Screen"
                       />
                       <video class="image__light" muted loop autoplay>
-                        <source src="img/demo/screens/3.mp4" type="video/mp4" />
+                        <source
+                          src="img/demo/screens/6.webm"
+                          type="video/mp4"
+                        />
                         Your browser does not support the video tag.
                       </video>
                     </div>
