--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
 
-    <!-- Template Favicon & Icons Start -->
+    <!--  Favicon & Icons Start -->
     <link rel="icon" href="img/favicon/favicon.ico" sizes="any" />
     <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png" />
     <link rel="manifest" href="img/favicon/manifest.webmanifest" />
 
-    <!-- Template Favicon & Icons End -->
+    <!--  Favicon & Icons End -->
 
-    <!-- Template Styles Start -->
+    <!--  Styles Start -->
     <link rel="stylesheet" type="text/css" href="css/plugins-demo.css" />
     <link rel="stylesheet" type="text/css" href="css/main-demo.css" />
-    <!-- Template Styles End -->
+    <!--  Styles End -->
 
     <!-- Custom Browser Color Start -->
     <meta name="theme-color" content="#4d26b3" />
@@ -165,7 +165,7 @@
                       <img
                         class="image__dark theme-img"
                         src="img/demo/screens/1-dark.webp"
-                        alt="Helio Coming Soon Template Preview Screen"
+                        alt=""
                       />
                       <video class="image__light" muted loop autoplay>
                         <source src="img/demo/screens/1.mp4" type="video/mp4" />
@@ -185,7 +185,7 @@
                       <img
                         class="image__dark theme-img"
                         src="img/demo/screens/3-dark.webp"
-                        alt="Helio Coming Soon Template Preview Screen"
+                        alt=""
                       />
                       <video class="image__light" muted loop autoplay>
                         <source src="img/demo/screens/3.mp4" type="video/mp4" />
@@ -205,7 +205,7 @@
                       <img
                         class="image__dark theme-img"
                         src="img/demo/screens/5-dark.webp"
-                        alt="Helio Coming Soon Template Preview Screen"
+                        alt=""
                       />
                       <video class="image__light" muted loop autoplay>
                         <source
@@ -225,11 +225,8 @@
                 <figure>
                   <a class="links__image" href="#" target="_blank">
                     <div class="image-container card">
-                      <img
-                        class="image__dark theme-img"
-                        src="img/demo/screens/2-dark.webp"
-                        alt="Helio Coming Soon Template Preview Screen"
-                      />
+                      <img class="image__dark theme-img"
+                      src="img/demo/screens/2-dark.webp" alt=" />
                       <video class="image__light" muted loop autoplay>
                         <source src="img/demo/screens/2.mp4" type="video/mp4" />
                         Your browser does not support the video tag.
@@ -248,10 +245,13 @@
                       <img
                         class="image__dark theme-img"
                         src="img/demo/screens/4-dark.webp"
-                        alt="Helio Coming Soon Template Preview Screen"
+                        alt=""
                       />
                       <video class="image__light" muted loop autoplay>
-                        <source src="img/demo/screens/4.mp4" type="video/mp4" />
+                        <source
+                          src="img/demo/screens/6.webm"
+                          type="video/mp4"
+                        />
                         Your browser does not support the video tag.
                       </video>
                     </div>
@@ -268,7 +268,7 @@
                       <img
                         class="image__dark theme-img"
                         src="img/demo/screens/6-dark.webp"
-                        alt="Helio Coming Soon Template Preview Screen"
+                        alt=""
                       />
                       <video class="image__light" muted loop autoplay>
                         <source
