--- a/index.html
+++ b/index.html
@@ -225,8 +225,11 @@
                 <figure>
                   <a class="links__image" href="#" target="_blank">
                     <div class="image-container card">
-                      <img class="image__dark theme-img"
-                      src="img/demo/screens/2-dark.webp" alt=" />
+                      <img
+                        class="image__dark theme-img"
+                        src="img/demo/screens/2-dark.webp"
+                        alt=""
+                      />
                       <video class="image__light" muted loop autoplay>
                         <source src="img/demo/screens/2.mp4" type="video/mp4" />
                         Your browser does not support the video tag.
